--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,9 @@ CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+
+
+# Matt's RGB effects and colors
+# https://zmk.dev/docs/config/underglow
+# Keyboard start up. 3=swirl
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
