--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,11 +2,19 @@
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=y
-
-
-# Matt's RGB effects and colors
+#
+# RGB effects and colors
 # https://zmk.dev/docs/config/underglow
+#
 # Keyboard start up. 3=swirl
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+
+#
+# OLED Display options
+#
+# Enable Corne OLED Display
+CONFIG_ZMK_DISPLAY=y
+# Show WPM count
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# Disable battery status
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
