--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,13 +1,13 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+#CONFIG_ZMK_RGB_UNDERGLOW=y
+#CONFIG_WS2812_STRIP=y
 
 #
 # RGB effects and colors
 # https://zmk.dev/docs/config/underglow
 #
 # Keyboard start up. 3=swirl
-CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+#CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 
 #
 # OLED Display options
@@ -18,3 +18,6 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 # Disable battery status
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+
+# Increase radio TX power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
