--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,4 @@ include:
     shield: corne_left
   - board: nice_nano_v2
     shield: corne_right
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=C0rn3
