--- a/config/corne.conf
+++ b/config/corne.conf
@@ -22,4 +22,4 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 # Increase radio TX power
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_ZMK_KEYBOARD_NAME=C0rn3
+#CONFIG_ZMK_KEYBOARD_NAME=C0rn3
