--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,5 @@
 # Increase radio TX power
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable split support
 CONFIG_ZMK_SPLIT=y
