--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,3 +11,6 @@ CONFIG_ZMK_BACKLIGHT=n
 # Reporting for both split halves
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# Enable ZMK Studio
+CONFIG_ZMK_STUDIO=y
