--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,8 +5,8 @@
 CONFIG_ZMK_SPLIT=y
 
 # Attempt to reduce power. 
-CONFIG_ZMK_BACKLIGHT_ON_START=n
-CONFIG_ZMK_BACKLIGHT=n
+#CONFIG_ZMK_BACKLIGHT_ON_START=n
+#CONFIG_ZMK_BACKLIGHT=n
 
 # Reporting for both split halves
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
