--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,9 +4,13 @@
 # Enable split support
 CONFIG_ZMK_SPLIT=y
 
-# Attempt to reduce power. 
+# Power management
 CONFIG_ZMK_BACKLIGHT_ON_START=n
 CONFIG_ZMK_BACKLIGHT=n
+## https://zmk.dev/docs/config/power#low-power-states
+CONFIG_ZMK_IDLE_TIMEOUT=15000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=450000
 
 # Reporting for both split halves
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
