--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,10 +4,9 @@
 # Enable split support
 CONFIG_ZMK_SPLIT=y
 
-# Attempt to reduce power. 
-#CONFIG_ZMK_BACKLIGHT_ON_START=n
-#CONFIG_ZMK_BACKLIGHT=n
+# Uncomment the following lines to enable the Corne RGB Underglow
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 
-# Reporting for both split halves
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# Uncomment the following line to enable the Corne OLED Display
+CONFIG_ZMK_DISPLAY=y
