--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,3 +10,10 @@ CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+# Don't display battery status for wired setup.
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+# Widget to show BLE / USB output status
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+
+# Give your keyboard a name
+CONFIG_ZMK_KEYBOARD_NAME=Corne-wired
