--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,4 +16,4 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 
 # Give your keyboard a name
-# CONFIG_ZMK_KEYBOARD_NAME=Corne-wired
+CONFIG_ZMK_KEYBOARD_NAME="Corne wired"
