--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,6 +7,8 @@ CONFIG_ZMK_SPLIT=y
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+# Underglow auto shutoff while idle.
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -16,4 +18,3 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 
 # Give your keyboard a name
-#CONFIG_ZMK_KEYBOARD_NAME="Corne wired"
