--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,3 +16,12 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 # Widget to show BLE / USB output status
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 
+#
+# RGB effects and colors
+# https://zmk.dev/docs/config/underglow
+#
+# Keyboard start up. 3=swirl
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+
+# Show WPM count
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
