--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,16 +1,19 @@
 # Increase radio TX power
 # CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# MacOS Battery reporting fix for MacOS 
+CONFIG_BT_BAS=n
 
 # Enable split support
 CONFIG_ZMK_SPLIT=y
 
 # Power management
+## https://zmk.dev/docs/config/power#low-power-states
 CONFIG_ZMK_BACKLIGHT_ON_START=n
 CONFIG_ZMK_BACKLIGHT=n
-## https://zmk.dev/docs/config/power#low-power-states
+CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_IDLE_TIMEOUT=15000
-CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=450000
+CONFIG_ZMK_SLEEP=y
 
 # Reporting for both split halves
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
